* remove unnecessarily added logging