@@ -46,7 +46,6 @@ public class Test2GbHeap {
     ArrayList<String> testArguments = new ArrayList<String>();
 
     testArguments.add("-XX:+UseG1GC");
-    testArguments.add("-Xlog:gc=debug");
     testArguments.add("-Xmx2g");
     testArguments.add("-version");
 
